02_code1/grade.txt
Grading at Mon Mar 15 01:06:08 UTC 2021
Checking code1.c for legal syntax
temp.c: In function ‘max’:
temp.c:5:14: error: ‘num’ undeclared (first use in this function)
   if (num1 > num)
              ^
temp.c:5:14: note: each undeclared identifier is reported only once for each function it appears in
temp.c:15:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
